# NLP_Lab

./:  build_pooled_dataset_llama.py   run_extraction_swimming.sh  .gitignore  HPC.md  LICENSE  Problem_with_Dataset.md  Problem_with_llama.md  README.md  Troubleshooting.md  Updates.md  Updates_3.md  Updates_4.md  build_lasttoken_2dom.py  build_pooled_dataset.py  check_dataset.py  check_gold_coverage.py  check_parser_diff.py  compute_doc_intersection.py  inspect_labels.py  inspect_tokens.py  install_a100_env.sh  intersection_docs.txt  mini_deck_examples.py  patch_matcher_depth_guard.py  pyproject.toml  requirements.txt  review_doc.py  run_all_tokens.py  run_analysis.sh  run_analysis_docling.sh  run_analysis_invoices.sh  run_analysis_mean.sh  run_analysis_nda.sh  run_analysis_swimming.sh  run_clap.sh  run_deepseek_analysis.sh  run_deepseek_extract.sh  run_extract_alltokens.sh  run_extract_alltokens_a100.sh  run_extract_docling.sh  (+42 more)
Updates/: Docling.md  Project_Master_Guide.md  Regen.md  Selective_Regeneration.md  Update_01.md  Update_02.md  Update_07.md  Updates_4.md  Updates_5.md  Updates_6.md  Updates_7.md  Updates_8.md  Updates_9.md  update_04.md
configs/: default.yaml  default.yml  exp_deepseek_r1_7b_pooled.yaml  exp_deepseek_r1_7b_sob.yaml  exp_deepseek_r1_7b_sob_attr.yaml  exp_gemma3_12b_pooled.yaml  exp_gemma3_12b_swim.yaml  exp_gemma3_12b_test5.yaml  exp_gemma4_12b_pooled.yaml  exp_llama31_8b.yaml  exp_llama31_8b_10kq.yaml  exp_llama31_8b_credit.yaml  exp_llama31_8b_swimming.yaml  exp_qwen35_2b_pooled.yaml  exp_qwen35_4b_10kq.yaml  exp_qwen35_4b_10kq_alltokens.yaml  exp_qwen35_4b_10kq_docling.yaml  exp_qwen35_4b_credit.yaml  exp_qwen35_4b_credit_alltokens.yaml  exp_qwen35_4b_credit_docling.yaml  exp_qwen35_4b_docling.yaml  exp_qwen35_4b_insurance.yaml  exp_qwen35_4b_invoices.yaml  exp_qwen35_4b_lasttoken_2dom.yaml  exp_qwen35_4b_mean.yaml  exp_qwen35_4b_nda.yaml  exp_qwen35_4b_pooled.yaml  exp_qwen35_4b_pooled_alltokens.yaml  exp_qwen35_4b_pooled_docling.yaml  exp_qwen35_4b_pooled_regen.yaml  exp_qwen35_4b_pymupdf.yaml  exp_qwen35_4b_pymupdf_alltokens.yaml  exp_qwen35_4b_pymupdf_docling.yaml  exp_qwen35_4b_sob.yaml  exp_qwen35_4b_swimming.yaml  exp_qwen35_4b_swimming_alltokens.yaml  exp_qwen35_4b_swimming_docling.yaml  (+1 more)
(+70 files in other folders)
