[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probe-extraction"
version = "0.1.0"
description = "Probe-based trust signals for structured information extraction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Syed Ali Mehdi Rizvi", email = "syedalirizvi0907@gmail.com" },
]
keywords = [
    "nlp",
    "interpretability",
    "linear-probes",
    "information-extraction",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies are managed via requirements.txt for clarity in
# Kaggle/Colab environments. We deliberately leave [project.dependencies]
# empty so that `pip install -e .` does not attempt to resolve and install
# heavy packages (torch, transformers, etc.) when they're already provided
# by the runtime. Use:
#     pip install -r requirements.txt
#     pip install -e .
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.urls]
Repository = "https://github.com/PC0907/NLP_Lab"

# ----------------------------------------------------------------------------
# setuptools configuration: tell it the package lives in src/
# ----------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
probe_extraction = ["py.typed"]

# ----------------------------------------------------------------------------
# pytest configuration
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]